style.css
/*    General settings     */
@import url('https://fonts.googleapis.com/css?family=Righteous');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  transition: background-color 0.5s ease;
}

/*     Header     */
h1 {
  color: white;
  font-size: 50px;
  padding: 20px;
  font-family: 'Righteous', cursive;
  text-shadow:
    -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
    1px 1px 0 #000;
}

/*     Theme Styling      */
.theme {
  position: fixed;
  right: 1rem;
  top: 1rem;
  border: none;
  background: none;
  outline: none;
}

.theme--dark {
  color: white;
}

.dark {
  background-color: grey;
}

/*     FAB Styling     */
.add-list {
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  padding: 0;
  border: none;
  background-color: white;
  color: red;
  border-radius: 28px;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
    0px 6px 10px 0px rgba(0, 0, 0, 0.14),
    0px 1px 18px 0px rgba(0, 0, 0, 0.12);
  transition: box-shadow 0.25s ease-in-out;
  outline: none;
  cursor: pointer;
  border: 1px solid red;
}

.add-list:hover {
  box-shadow: 0 14px 30px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

.add-list__icon {
  padding: 16px;
}

/*     List styling     */
.list {
  float: left;
  width: 250px;
  background-color: white;
  margin-left: 30px;
  margin-top: 10px;
  box-shadow: 0 14px 30px rgba(0, 0, 0, 0.25);
  border-top: 5px solid #ef5350;
}

.list:hover {
  box-shadow: 0 14px 30px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}

/*    List title     */
.list__title {
  float: left;
  height: 34px;
  width: calc(100% - 34px);
  font-size: 15px;
  outline: none;
  text-align: center;
  border: none;
  border-bottom: 1px solid red;
}

.list__remove {
  float: right;
  padding: 0;
  border: none;
  border-bottom: 1px solid red;
  background-color: white;
  color: red;
  outline: none;
  cursor: pointer;
  width: 34px;
  height: 34px;
  text-align: center;
  line-height: 34px;
}

.list__remove:hover {
  background-color: red;
  color: white;
}

.list__view {
  clear: both;
}

.list__add-note {
  margin-top: 5px;
  color: red;
  width: 100%;
  height: 28px;
  background-color: white;
  border: none;
  border-top: 1px solid red;
  outline: none;
}

.list__add-note__icon, .list__add-note__text {
  line-height: 28px;
}

.list__add-note__text {
  font-size: 18px;
}

